--- a/11_visualizations.qmd
+++ b/11_visualizations.qmd
@@ -5,4 +5,5 @@ title: "11: Visualizations"
 <https://bellecp.github.io/597-Data-Wrangling-Spring-2024/project.html#around-4-6-or-more-visualizations-related-to-the-dataset>
 Describe your contributions below.
 
+We have not yet decided what visualizations we will explore
 * * *
