tokenized df analysis

--- a/DataCo_Supply_Chain_Analytics.ipynb
+++ b/DataCo_Supply_Chain_Analytics.ipynb
@@ -16103,7 +16103,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "4b19c30a",
+   "id": "57d3b6c1",
    "metadata": {},
    "outputs": [
     {
@@ -16135,7 +16135,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "66188be0",
+   "id": "af89cc88",
    "metadata": {},
    "outputs": [
     {
@@ -16194,7 +16194,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "baa1f4a4",
+   "id": "6ea74bbc",
    "metadata": {},
    "outputs": [
     {
@@ -16219,7 +16219,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "83923275",
+   "id": "28d5309f",
    "metadata": {},
    "source": [
     "Visualization"
@@ -17215,7 +17215,74 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "592eebca",
+   "id": "5c167c6a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#tokenized_df analysis\n",
+    "\n",
+    "# Analysis 1: Product Category Analysis\n",
+    "product_category_counts = tokenized_df['Category'].value_counts()\n",
+    "print(\"Product Category Counts:\")\n",
+    "print(product_category_counts)\n",
+    "\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "sb.barplot(x=product_category_counts.index, y=product_category_counts.values)\n",
+    "plt.title('Product Category Distribution')\n",
+    "plt.xlabel('Product Category')\n",
+    "plt.ylabel('Count')\n",
+    "plt.xticks(rotation=45)\n",
+    "plt.show()\n",
+    "\n",
+    "# Analysis 2: Department Analysis\n",
+    "department_counts = tokenized_df['Department'].value_counts()\n",
+    "print(\"Department Counts:\")\n",
+    "print(department_counts)\n",
+    "\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "sb.barplot(x=department_counts.index, y=department_counts.values)\n",
+    "plt.title('Department Distribution')\n",
+    "plt.xlabel('Department')\n",
+    "plt.ylabel('Count')\n",
+    "plt.xticks(rotation=45)\n",
+    "plt.show()\n",
+    "\n",
+    "# Analysis 3: Hourly Distribution of Transactions\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "sb.histplot(data=tokenized_df, x='Hour', bins=24, kde=False)\n",
+    "plt.title('Hourly Distribution of Transactions')\n",
+    "plt.xlabel('Hour of the Day')\n",
+    "plt.ylabel('Number of Transactions')\n",
+    "plt.show()\n",
+    "\n",
+    "# Analysis 4: Monthly Transaction Trend\n",
+    "monthly_transaction_counts = tokenized_df['Month'].value_counts().sort_index()\n",
+    "print(\"Monthly Transaction Counts:\")\n",
+    "print(monthly_transaction_counts)\n",
+    "\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "sb.lineplot(x=monthly_transaction_counts.index, y=monthly_transaction_counts.values, marker='o')\n",
+    "plt.title('Monthly Transaction Trend')\n",
+    "plt.xlabel('Month')\n",
+    "plt.ylabel('Number of Transactions')\n",
+    "plt.xticks(rotation=45)\n",
+    "plt.show()\n",
+    "\n",
+    "# Analysis 5: IP Address Analysis\n",
+    "top_ip_addresses = tokenized_df['ip'].value_counts().head(10)\n",
+    "print(\"Top 10 IP Addresses:\")\n",
+    "print(top_ip_addresses)\n",
+    "\n",
+    "# Analysis 6: URL Analysis\n",
+    "top_urls = tokenized_df['url'].value_counts().head(10)\n",
+    "print(\"Top 10 URLs:\")\n",
+    "print(top_urls)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3a6d5495",
    "metadata": {
     "scrolled": true
    },
@@ -17234,7 +17301,7 @@
     }
    ],
    "source": [
-    "#supply df visuals\n",
+    "#supply df visuals and analysis\n",
     "\n",
     "# Visualization 1: Order Status Distribution\n",
     "plt.figure(figsize=(10, 6))\n",
