--- a/02_automated_retrieval.qmd
+++ b/02_automated_retrieval.qmd
@@ -1,9 +1,20 @@
 ---
-title: "2: Retrieval of raw data"
+title: '2: Retrieval of raw data'
+jupyter:
+  jupytext:
+    text_representation:
+      extension: .qmd
+      format_name: quarto
+      format_version: '1.0'
+      jupytext_version: 1.16.1
+  kernelspec:
+    display_name: Python 3 (ipykernel)
+    language: python
+    name: python3
 ---
 
 See <https://bellecp.github.io/597-Data-Wrangling-Spring-2024/project.html#retrieval-of-the-raw-data> for information.
 Describe your contributions below.
 
-The data source is Kaggle.
+The data source is Kaggle (https://www.kaggle.com/datasets/shashwatwork/dataco-smart-supply-chain-for-big-data-analysis?select=DataCoSupplyChainDataset.csv). 
 * * *
