--- a/10_statistical_ML.qmd
+++ b/10_statistical_ML.qmd
@@ -1,8 +1,22 @@
 ---
-title: "10: Statistical analisys"
+title: '10: Statistical Analysis'
+jupyter:
+  jupytext:
+    text_representation:
+      extension: .qmd
+      format_name: quarto
+      format_version: '1.0'
+      jupytext_version: 1.16.1
+  kernelspec:
+    display_name: Python 3 (ipykernel)
+    language: python
+    name: python3
 ---
 
 <https://bellecp.github.io/597-Data-Wrangling-Spring-2024/project.html#data-analysis>
 Describe your contributions below.
 
+Seaborn and Kmeans were used to make predicitive analysis and visulatization with the dataset.
+
+Calculations can be found in DW_SAMPLE1.ipynb
 * * *
