--- a/11_visualizations.qmd
+++ b/11_visualizations.qmd
@@ -1,9 +1,20 @@
 ---
-title: "11: Visualizations"
+title: '11: Visualizations'
+jupyter:
+  jupytext:
+    text_representation:
+      extension: .qmd
+      format_name: quarto
+      format_version: '1.0'
+      jupytext_version: 1.16.1
+  kernelspec:
+    display_name: Python 3 (ipykernel)
+    language: python
+    name: python3
 ---
 
 <https://bellecp.github.io/597-Data-Wrangling-Spring-2024/project.html#around-4-6-or-more-visualizations-related-to-the-dataset>
 Describe your contributions below.
 
-We have not yet decided what visualizations we will explore
+The visuals and comments are found in DW_SAMPLE1.ipynb
 * * *
