--- a/12_webpage.qmd
+++ b/12_webpage.qmd
@@ -1,8 +1,20 @@
 ---
-title: "12: Webpage"
+title: '12: Webpage'
+jupyter:
+  jupytext:
+    text_representation:
+      extension: .qmd
+      format_name: quarto
+      format_version: '1.0'
+      jupytext_version: 1.16.1
+  kernelspec:
+    display_name: Python 3 (ipykernel)
+    language: python
+    name: python3
 ---
 
 <https://bellecp.github.io/597-Data-Wrangling-Spring-2024/project.html#creation-web-page-to-communicate-your-project-methodology-analysis>.
 Describe your contributions below.
 
+The website link is: https://stats-at-rutgers.github.io/Digital-Dynamos/
 * * *
