--- a/13_interactive.qmd
+++ b/13_interactive.qmd
@@ -1,8 +1,22 @@
 ---
-title: "13: interactivity"
+title: '13: interactivity'
+jupyter:
+  jupytext:
+    text_representation:
+      extension: .qmd
+      format_name: quarto
+      format_version: '1.0'
+      jupytext_version: 1.16.1
+  kernelspec:
+    display_name: Python 3 (ipykernel)
+    language: python
+    name: python3
 ---
 
 See <https://bellecp.github.io/597-Data-Wrangling-Spring-2024/project.html#interactive-data-widget>.
 Describe your contributions below.
 
+Interactive widget was created in which users can use a slider to displays all rows in the DataFrame where the value in the selected column is greater than the threshold
+
+The visuals are in DW_SAMPLE1.ipynb
 * * *
