--- a/20_reproducibility.qmd
+++ b/20_reproducibility.qmd
@@ -1,8 +1,20 @@
 ---
-title: "20: Reproducibility"
+title: '20: Reproducibility'
+jupyter:
+  jupytext:
+    text_representation:
+      extension: .qmd
+      format_name: quarto
+      format_version: '1.0'
+      jupytext_version: 1.16.1
+  kernelspec:
+    display_name: Python 3 (ipykernel)
+    language: python
+    name: python3
 ---
 
 <https://bellecp.github.io/597-Data-Wrangling-Spring-2024/project.html#provide-instructions-on-how-to-reproduce-the-project>.
 Describe your contributions below.
 
+Download the following Python Library: pandas, numpy, ipywidgets, matplotlib. Download the dataset from Kaggle: https://www.kaggle.com/datasets/shashwatwork/dataco-smart-supply-chain-for-big-data-analysis?select=DataCoSupplyChainDataset.csv
 * * *
