--- a/04_enrichment.qmd
+++ b/04_enrichment.qmd
@@ -17,4 +17,7 @@ See <https://bellecp.github.io/597-Data-Wrangling-Spring-2024/project.html#data-
 Describe your contributions below.
 
 Efforts were made to scrape the data from the website. However, due to security reasons, the company does not allow to scrape the data. To combat this issue, necessary csv files were downloaded from the site and loaded into jupyter notebook via Python dataframes. Calculative columns wered added to the dataframe.
+
+An inner join was performed on the dataset to get all the rows with common values.
 * * *
+
