--- a/08_backup_external_service.qmd
+++ b/08_backup_external_service.qmd
@@ -1,8 +1,20 @@
 ---
-title: "8: External services"
+title: '8: External services'
+jupyter:
+  jupytext:
+    text_representation:
+      extension: .qmd
+      format_name: quarto
+      format_version: '1.0'
+      jupytext_version: 1.16.1
+  kernelspec:
+    display_name: Python 3 (ipykernel)
+    language: python
+    name: python3
 ---
 
 See <https://bellecp.github.io/597-Data-Wrangling-Spring-2024/project.html#backup-of-the-raw-and-tidied-data-on-external-storage-service>.
-Describe your contributions below.
 
+The backup of raw and tidied data was saved on Mehak's macbook as she performed the initial analysis.
 * * *
+
