--- a/14_poster.qmd
+++ b/14_poster.qmd
@@ -1,8 +1,20 @@
 ---
-title: "14: Poster"
+title: '14: Poster'
+jupyter:
+  jupytext:
+    text_representation:
+      extension: .qmd
+      format_name: quarto
+      format_version: '1.0'
+      jupytext_version: 1.16.1
+  kernelspec:
+    display_name: Python 3 (ipykernel)
+    language: python
+    name: python3
 ---
 
 See <https://bellecp.github.io/597-Data-Wrangling-Spring-2024/project.html#poster>.
-Describe your contributions below.
 
+https://www.canva.com/design/DAGDnZuanP8/5TL1108iAXCrNTTUggzSzA/view
 * * *
+
