--- a/03_raw_to_tabular.qmd
+++ b/03_raw_to_tabular.qmd
@@ -17,6 +17,7 @@ See <https://bellecp.github.io/597-Data-Wrangling-Spring-2024/project.html#from-
 Describe your contributions below.
 
 The dataset contains 3 csv files, which are named inventory, fulfilment, orders and shipment. The tables are joined on Product Name columns.
-The 3 csv files are combined into one and a pandas dataframe "merged_df" is created. The project file is named "DW_SAMPLE1.ipynb"
+The 3 csv files are combined into one and a pandas dataframe "merged_df" is created. 
+The project file is named "Final_Project.ipynb"
 * * *
 
